tests/testfiles/invalid_prog_fails/15_double_decl_wo_comma.c
int main() {
    int x y;

    return 100;
}